[package]
name = "duo-auth-rs"
version = "0.2.1"
authors = ["James Brown <jbrown@easypost.com>", "Jared Greeno <jared@easypost.com>"]
description = "Small binary that implements Duo push authentication and incorporates a 'recent ip' whitelist"
license = "ISC"
edition = "2018"

[dependencies]
reqwest = "^0.9.8"
chrono = "^0.4"
sha-1 = "0.8"
hmac = "0.7"
clap = "2"
log = "^0.4"
hex = "^0.3.2"
env_logger = "^0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log-panics = { version = "1.1" , features = ["with-backtrace"] }
error-chain = "0.10"
url = "1"
ipnetwork = "^0.12"
syslog = "^4.0"

[dependencies.rusqlite]
version = "^0.16"
# statically link sqlite
features = ["bundled"]

[dev-dependencies]
tempfile = "3.0"

