[package]
name = "duo-auth-rs"
version = "0.2.2"
authors = ["James Brown <jbrown@easypost.com>", "Jared Greeno <jared@easypost.com>"]
description = "Small binary that implements Duo push authentication and incorporates a 'recent ip' whitelist"
license = "ISC"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "^0.4"
sha-1 = "0.9"
hmac = "0.10"
clap = "2"
log = "^0.4"
hex = "^0.3.2"
env_logger = "^0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log-panics = { version = "1.1" , features = ["with-backtrace"] }
thiserror = "1.0"
url = "2"
ipnetwork = "^0.17"
syslog = "^5.0"
rusqlite = { version = "^0.24", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.0"

