[package]
name = "duo-auth-rs"
version = "0.2.2"
authors = ["James Brown <jbrown@easypost.com>", "Jared Greeno <jared@easypost.com>"]
description = "Small binary that implements Duo push authentication and incorporates a 'recent ip' whitelist"
license = "ISC"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "^0.4"
sha-1 = "0.10"
hmac = "0.12"
clap = "3"
log = "^0.4"
hex = "^0.4.3"
env_logger = "^0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log-panics = { version = "2" , features = ["with-backtrace"] }
thiserror = "1"
url = "2"
ipnetwork = "^0.16"
syslog = "^5.0"
rusqlite = { version = "^0.26", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.3"
